# fortigate-inventory-ansible

./: .pre-commit-config.yaml  README.md  ansible.cfg  example_fortigate.yaml  galaxy.yml  pyproject.toml  requirements.txt
collections/ansible_collections/evansible/fortigate/: README.md
collections/ansible_collections/evonck/fortigate/: README.md  galaxy.yml
plugins/inventory/: inventory.py
