[tool.poetry]
name = "fortigate-inventory-ansible"
version = "0.1.0"
description = "Fortigate API as dynamic ansible inventory"
authors = ["Emil Vonck <emil.vonck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^6.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
